# midimotif

./: README.md  pyproject.toml  requirements.txt
motiflab/analysis/: motif.py  transformations.py
motiflab/core/: constants.py  event_model.py  harmonic_analysis.py  midi_io.py  timing.py
motiflab/tests/: test_event_model.py  test_harmonic_analysis.py  test_motif_detection.py
scripts/: analyse_midi.py
