[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motiflab"
version = "0.1.0"
description = "Symbolic MIDI analysis prototype"
requires-python = ">=3.11"
dependencies = [
  "mido>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["motiflab/tests"]
